fix: fixed header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 10;
 }
 
 header + * {
